[project]
name = "kwik"
version = "0.1.0"
description = "Kwik is a web framework for building modern, batteries-included, RESTful backends with Python 3.10+. Kwik is based on FastAPI, builds upon it and delivers an opinionated concise, business-oriented API."
readme = "README.md"
authors = [
    { name = "dmezzogori", email = "dmezzogori@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "broadcaster==0.2.0",
    "fastapi==0.116.1",
    "gunicorn==23.0.0",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==1.10.22",
    "python-jose==3.3.0",
    "python-multipart==0.0.19",
    "requests==2.32.4",
    "sqlalchemy==1.4.48",
    "uvicorn==0.35.0",
    "websockets==14.1",
    "jinja2>=3.1.4",
]

[project.scripts]
kwik = "kwik.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
    "ruff>=0.12.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src/kwik --cov-report=term-missing --cov-report=xml -v"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106", "S107", "SLF001", "N805"]
"*/tests/*.py" = ["S101", "S105", "S106", "S107", "S311", "SLF001", "N805"]
"src/kwik/core/settings.py" = ["N805", "FBT001"]
"src/kwik/schemas/*.py" = ["N805", "FBT001"]
