[project]
name = "kwik"
version = "1.3.2"
description = "Fast, batteries-included, business-oriented, opinionated REST APIs framework"
readme = "README.md"
authors = [
    { name = "dmezzogori", email = "dmezzogori@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "bcrypt==4.0.1",
    "fastapi[standard]==0.116.1",
    "gunicorn==23.0.0",
    "httptools==0.6.4",
    "psycopg2-binary==2.9.10",
    "pydantic[email]>=2.0.0,<3.0.0",
    "pyjwt>=2.10.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic-settings>=2.10.1",
    "loguru>=0.7.3",
    "testcontainers>=4.0.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.1",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kwik = "kwik.__main__:main"

[tool.pytest.ini_options]
addopts = "-n auto --cov=src/kwik --cov-branch --cov-report=term-missing:skip-covered --cov-report=xml --cov-append"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "src/kwik/applications/uvicorn.py",
    "src/kwik/applications/gunicorn.py",
    "src/kwik/__main__.py",
    "src/kwik/applications/run.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "TD002", "TD003"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106", "S107", "SLF001", "N805"]
"*/tests/*.py" = ["S101", "S105", "S106", "S107", "S311", "SLF001", "N805"]
"src/kwik/core/settings.py" = ["N805", "FBT001"]
"src/kwik/schemas/*.py" = ["N805", "FBT001"]
